--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,6 +15,19 @@
         <li><a href="{{ .URL | absLangURL }}">{{ .Name | upper }}</a></li>
         {{ end }}
       {{ end }}
+        <li>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              <img class="language-switch" src="{{ .Site.BaseURL }}img/change-lang.png">
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              {{ range $.Site.Home.AllTranslations }}
+                <li><a href="#" onclick="setLanguage({{ .Permalink }}, {{ .Lang }})">{{ .Language.LanguageName }}</a></li>
+              {{ end }}
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
