--- a/layouts/_default/tips.html
+++ b/layouts/_default/tips.html
@@ -1,6 +1,8 @@
 <section id="tips">
   <div class="container">
-    <h3>{{ .Site.Data.tips.name }}</h3>
+    <h3>
+      <strong><a href="{{ .Permalink }}">{{ .Site.Data.tips.name }}</a></strong>
+    </h3>
     <div class="panel panel-default">
       <div class="panel-body">
       {{ range $i, $el := .Site.Data.tips.source }}
