--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,6 +34,7 @@
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->` | safeHTML }}
-
-    {{ template "_internal/google_analytics.html" . }}
+    {{ if not (in (.Site.BaseURL | string) "localhost") }}
+      {{ template "_internal/google_analytics.html" . }}
+    {{ end }}
   </head>
