--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -48,3 +48,93 @@
   <meta name="twitter:image" content="{{ .Site.Params.ogimage | absURL }}" />
   <meta name="twitter:image:src" content="{{ .Site.Params.ogimage | absURL }}" /> 
 {{ end }}
+
+<!-- Date, sitemap and RSS metadata -->
+<meta property="og:updated_time" content={{ .Lastmod.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
+<link rel="sitemap" type="application/xml" title="Sitemap" href="{{ .Site.BaseURL }}sitemap.xml" /> 
+
+{{ with .OutputFormats.Get "RSS" }}
+  <link href="{{ .Permalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
+  <link href="{{ .Permalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}" />
+{{ end }}
+
+<!-- Blog metadata -->
+{{ if in .Site.Params.metadata_allowed_blog .Section }} 
+
+  <!-- Pagination meta tags for list pages only -->
+  {{ $paginator := .Paginate (where .Pages "Section" .Section) }}
+  {{ if $paginator }}
+    <link rel="first" href="{{ $paginator.First.URL }}">
+    <link rel="last" href="{{ $paginator.Last.URL }}">
+    {{ if $paginator.HasPrev }}
+      <link rel="prev" href="{{ $paginator.Prev.URL }}">
+    {{end }}
+    {{ if $paginator.HasNext }}
+      <link rel="next" href="{{ $paginator.Next.URL }}">
+    {{end }}
+  {{end }}
+
+  <meta property="og:type" content="article" />
+  <meta property="article:publisher" content="{{ .Site.Params.facebook }}" /> 
+  <meta property="og:article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} /> 
+  <meta property="article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
+  
+  {{ with.Params.author }} 
+    <meta property="og:article:author" content="{{humanize . }}" />
+    <meta property="article:author" content="{{humanize . }}" /> 
+    <meta name="author" content="{{humanize . }}" /> 
+  {{ end }}
+  
+  {{ with.Params.category }} 
+    <meta name="news_keywords" content="{{ index . 0 }}" />
+    <meta property="article:section" content="{{ index . 0 }}" /> 
+  {{ end }}
+
+  <script defer type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "headline": {{ .Title }},
+      "url": "{{ .Permalink }}",
+      "author": {
+        "@type": "Person",
+        "name": "{{ .Params.author }}"
+      },
+      "datePublished": "{{ .Date.Format "2006-01-02" }}",
+      "description": {{ .Description }},
+      "wordCount": {{ .WordCount }},
+      "mainEntityOfPage": "True",
+      "dateModified": "{{ .Lastmod.Format "2006-01-02" }}",
+      {{ with .Params.image }}
+      "image": "{{ . | absURL }}",
+      {{ end }}
+      "publisher": {
+        "@type": "Organization",
+        "name": "{{ .Site.Title }}",
+        "logo": {
+          "@type": "imageObject",
+          "url": "{{ .Site.BaseURL }}img/favicon.ico" 
+        }
+      }
+    }
+  </script>
+{{ else }}
+    <meta property="og:type" content="website" /> 
+    <meta name="author" content="{{ .Site.Params.author }}" />
+    <script defer type="application/ld+json">
+    { 
+        "@context": "http://schema.org", 
+        "@type": "WebSite", 
+        "url": "{{ .Permalink }}", 
+        "sameAs": [
+            "https://www.facebook.com/{{ .Site.Params.social.Facebook }}", 
+            "https://twitter.com/{{ .Site.Params.social.Twitter }}",
+            "https://www.instagram.com/{{ .Site.Params.social.Instagram }}"
+        ], 
+        "name": "{{ .Title }}", 
+        "logo": "{{ .Site.BaseURL }}img/favicon.ico" 
+    }
+    </script>
+{{ end }}
+
+
