[feat]: co-authored with i18n

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -132,7 +132,7 @@
   </script>
 {{ else }}
     <meta property="og:type" content="website" /> 
-    <meta name="author" content="{{ .Site.Params.author }}" />
+    <meta name="author" content='{{ i18n "co-authored" }} {{ .Site.Params.author }}' />
     <script defer type="application/ld+json">
     { 
         "@context": "http://schema.org", 
