[fix]: keywords meta html problem

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -162,7 +162,7 @@
 
 <!-- Other metadata -->
 {{ with .Params.tags }}
-<meta name="keywords" content="{{ delimit . ", " }}" />   
+<meta name="keywords" content='{{ delimit . ", " }}' />   
 {{ end }}
 <meta name="imagemode" content="force" />
 <meta name="coverage" content="Worldwide" /> 
