[feat]: form contact

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
         </div>
         {{.Content}}
         {{ partial "social.html" . }}
+        {{ partial "modalContact.html" . }}
         </div>
       </section>
     </div>
