[fix]: form alert response

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,8 @@
         </div>
         {{.Content}}
         {{ partial "social.html" . }}
-        {{ partial "modalContact.html" . }}
+        {{ partial "contact/modalContact.html" . }}
+        {{ partial "contact/alertContact.html" . }}
         </div>
       </section>
     </div>
