--- a/layouts/partials/contact/modalContact.html
+++ b/layouts/partials/contact/modalContact.html
@@ -8,7 +8,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{ i18n "contact-header" }}</h4>
             </div>
-            <form name="contact" method="POST" data-netlify-recaptcha="true" netlify-honeypot="humanOrBot" data-netlify="true">
+            <form name="contact" method="POST" data-netlify-recaptcha="true" netlify-honeypot="humanOrBot" data-netlify="true" class="contact-form">
                 <div class="modal-body">
                     <p class="hidden">
                         <label>Don’t fill this out if you're human: <input name="humanOrBot" /></label>
