--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,7 +26,7 @@
     {{ if not (in (.Site.BaseURL | string) "localhost") }}
       {{ template "_internal/google_analytics.html" . }}
     {{ end }}
-    {{ if and (not (in (.Site.BaseURL | string) "localhost")) (.Site.Params.google_adsense) }}
+    <!--{{ if and (not (in (.Site.BaseURL | string) "localhost")) (.Site.Params.google_adsense) }}
       <script data-ad-client="{{ .Site.Params.google_adsense }}" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    {{ end }}
+    {{ end }}-->
   </head>
