[feat]: image shortcodes

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
       {{ partial "header" . }}
       <div class="container">
         <h3>
-          <strong><a href="{{ .Permalink }}">Archive</a></strong>
+          <strong><a href="{{ .Permalink }}">{{ i18n "articles" }}</a></strong>
         </h3>
         <div class="panel panel-default">
           <div class="panel-body">
