--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ body {
 /* Custom page CSS */
 .container {
   width: auto;
-  max-width: 800px;
+  max-width: 900px;
   text-align: center;
 }
 .container .text-muted {
@@ -182,6 +182,10 @@ body {
   text-align: left;
   line-height: 30px;
   font-size: 18px;
+}
+.homepage{
+  line-height: 30px;
+  font-size: 22px;
 }
 
 /* Footer  */
