--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,9 @@
         <div class="avatar">
           <img class="img-rounded" src="{{ .Site.BaseURL }}img/{{ .Site.Params.avatar }}" alt="Responsive image" width="120px">
         </div>
-        {{.Content}}
+        <div class="homepage">
+          {{.Content}}
+        </div>
         {{ partial "social.html" . }}
         {{ partial "contact/modalContact.html" . }}
         {{ partial "contact/alertContact.html" . }}
