--- a/layouts/shortcodes/tips-category.html
+++ b/layouts/shortcodes/tips-category.html
@@ -1,6 +1,7 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ $url := ref . (dict "path" "tips.md" "lang" .Site.Language.Lang) }}
+{{ $page := (.Get 0) }}
+{{ $url := ref . $page }}
 
 {{ range $data.tips }}
-  <a href="{{ $url }}#{{.name}}" style="margin: 0px 4px">{{ .name }}</a>
+  <b><a href="{{ $url }}#{{.name}}" style="margin: 0px 4px">{{ .name }}</a></b>
 {{ end }}
