--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,17 @@
 /* Main page with stikky-footer */
 html, body {
-  height: 100%;
   background-color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
 }
+
+html{
+  height: 100%;
+}
+
+body{ min-height:100%; padding:0; margin:0; position:relative; }
+
+body::after{ content:''; display:block; height:100px; }
 
 body {
   border-top: 20px solid #CB2E40;
@@ -15,10 +22,6 @@ body {
   padding-bottom: 50px;	
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -80px;
-  /* Pad bottom by footer height */
-  /*padding: 0 0 60px;*/
 }
 
 /* Navbar */
@@ -228,3 +231,9 @@ div.footer {
   padding-bottom: 15px;
   
 }*/
+
+footer{ 
+  position:absolute; 
+  bottom:0; 
+  width:100%; 
+}
