--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,8 @@
         {{ partial "social.html" . }}
         {{ partial "contact/modalContact.html" . }}
         {{ partial "contact/alertContact.html" . }}
-        <p>&copy; All rights reserved. Powered by <a href="{{ .Site.Params.Author1.Instagram }}"> {{ .Site.Params.Author1.name }} </a> 
-        and <a href="{{ .Site.Params.Author2.Instagram }}"> {{ .Site.Params.Author2.name }} </a> with ♥ </p>
+        <p>Made with ♥ by <a href="{{ .Site.Params.Author1.Instagram }}"> {{ .Site.Params.Author1.name }} </a> 
+        and <a href="{{ .Site.Params.Author2.Instagram }}"> {{ .Site.Params.Author2.name }} </a></p>
       </div>
     </div>
   </div>
