--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
       <section id="about">
         <div class="container">
         <div class="avatar">
-          <img class="img-rounded" src="{{ .Site.BaseURL }}img/{{ .Site.Params.avatar }}" alt="Responsive image" width="120px">
+          <img class="img-rounded flag-image" src="{{ .Site.BaseURL }}img/{{ .Site.Params.avatar }}" alt="Nepal flag">
         </div>
         <div class="homepage">
           {{.Content}}
