[feat]: initial trekking post

--- a/layouts/shortcodes/bundle-image.html
+++ b/layouts/shortcodes/bundle-image.html
@@ -5,15 +5,13 @@
 {{ with .Site.GetPage "media" }}
   {{ $original := .Resources.GetMatch (printf "*%s*" ($imagename)) }}
   <figure>
-    <a href="{{.RelPermalink}}">
-      <img
-        srcset='
-          {{ ($original.Resize "320x").RelPermalink }} 320w,
-          {{ ($original.Resize "600x").RelPermalink }} 600w,
-          {{ ($original.Resize "1200x").RelPermalink }} 2x'
-        src='{{ ($original.Resize "600x").RelPermalink }}' alt='{{$altText}}' class='img-responsive'/>
-    </a>
-    <figcaption style="text-align: center;"><p>{{ $caption }}</p></figcaption>
+    <img
+      srcset='
+        {{ ($original.Resize "320x").RelPermalink }} 320w,
+        {{ ($original.Resize "600x").RelPermalink }} 600w,
+        {{ ($original.Resize "1200x").RelPermalink }} 2x'
+      src='{{ ($original.Resize "600x").RelPermalink }}' alt='{{$altText}}' class='img-responsive'/>
+    <figcaption style="text-align: center; margin-bottom: 25px;"><p>{{ $caption }}</p></figcaption>
   </figure>
 {{ else }}
   could not find image
