--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,6 +108,18 @@ body {
   margin: 2rem auto;
   max-width: 100%;
 }
+.img-responsive-full {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  width: 100%;
+}
+.img-figcaption {
+  text-align: center;
+  margin-bottom: 25px;
+  background-color:#e1e1e1;
+  border-radius: 0px 0px 10px 10px;
+}
 .panel-default h4 {
   text-align: left;
   line-height: 24px;
