--- a/layouts/shortcodes/bundle-image.html
+++ b/layouts/shortcodes/bundle-image.html
@@ -10,8 +10,8 @@
         {{ ($original.Resize "320x").RelPermalink }} 320w,
         {{ ($original.Resize "600x").RelPermalink }} 600w,
         {{ ($original.Resize "1200x").RelPermalink }} 2x'
-      src='{{ ($original.Resize "600x").RelPermalink }}' alt='{{$altText}}' class='img-responsive'/>
-    <figcaption style="text-align: center; margin-bottom: 25px;"><p>{{ $caption }}</p></figcaption>
+      src='{{ ($original.Resize "600x").RelPermalink }}' alt='{{$altText}}' class='img-responsive-full'/>
+    <figcaption class="img-figcaption"><p>{{ $caption }}</p></figcaption>
   </figure>
 {{ else }}
   could not find image
