--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -88,9 +88,9 @@
   <meta property="article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
   
   {{ with.Params.author }} 
-    <meta property="og:article:author" content="{{humanize . }}" />
-    <meta property="article:author" content="{{humanize . }}" /> 
-    <meta name="author" content="{{humanize . }}" /> 
+    <meta property="og:article:author" content="{{ . }}" />
+    <meta property="article:author" content="{{ . }}" /> 
+    <meta name="author" content="{{ . }}" /> 
   {{ end }}
   
   {{ with.Params.category }} 
