--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,7 @@
   <div id="footer">
     <div class="container">
       <div class="text-muted">
+        {{ partial "ads" . }}
         {{ partial "social.html" . }}
         {{ partial "contact/modalContact.html" . }}
         {{ partial "contact/alertContact.html" . }}
