--- a/layouts/shortcodes/tips-category.html
+++ b/layouts/shortcodes/tips-category.html
@@ -1,7 +1,8 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 {{ $page := (.Get 0) }}
 {{ $url := ref . $page }}
-
-{{ range $data.tips }}
-  <b><a href="{{ $url }}#{{.name}}" style="margin: 0px 4px">{{ .name }}</a></b>
-{{ end }}
+<p style="margin-bottom: 50px;">
+  {{ range $data.tips }}
+    <b><a href="{{ $url }}#{{.name}}" style="margin: 0px 4px">{{ .name }}</a></b>
+  {{ end }}
+</p>
