[feat]: new Onelink Amazon affiliate

--- a/layouts/partials/ads.html
+++ b/layouts/partials/ads.html
@@ -1,4 +1,5 @@
 {{ if .Site.Params.amazon_affiliate }}
+    <div id="amzn-assoc-ad-cc22e468-e7ae-49ed-829b-801ad42bf7be"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=cc22e468-e7ae-49ed-829b-801ad42bf7be"></script>
     <div class="ads">
         {{ if .Site.IsServer }}
             <div class="fakeAds jumbotron">Fake Ads Banner</div>
