[feat]: yandex verification

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     {{ partial "meta" . }}
+
+    <meta name="yandex-verification" content="c16b234ae87281ef" />
   
     {{ hugo.Generator }}
 
