[feat]: new related post and removed tag after title

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,8 +6,8 @@
         {{ partial "social.html" . }}
         {{ partial "contact/modalContact.html" . }}
         {{ partial "contact/alertContact.html" . }}
-        <p>Made with ♥ by <a href="{{ .Site.Params.Author1.Instagram }}"> {{ .Site.Params.Author1.name }} </a> 
-        and <a href="{{ .Site.Params.Author2.Instagram }}"> {{ .Site.Params.Author2.name }} </a></p>
+        <p>Made with ♥ by <a href="{{ .Site.Params.authorAlessandro.Instagram }}"> {{ .Site.Params.authorAlessandro.name }} </a> 
+        and <a href="{{ .Site.Params.authorDenise.Instagram }}"> {{ .Site.Params.authorDenise.name }} </a></p>
       </div>
     </div>
   </div>
