--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,23 +1,39 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ partial "head" . }}
+{{ $authorFullName := .Params.author }}
+{{ $authorLink := .Site.Param (printf "%s%s%s%s" "author" .Params.author "." .Params.authorLink | lower) }}
+{{ if isset .Site.Params (printf "%s%s" "author" .Params.author | lower) }}
+  {{ $authorFullName = .Site.Param (printf "%s%s%s" "author" .Params.author ".fullName") }}
+{{ end }}
+
+  {{ partial "head" . }}
   <body>
     <div id="wrap">
 
       <!-- Header -->
       {{ partial "header" . }}
       <div class="container">
+        {{ if isset .Params "blog" }}
         <div class="blog-post">
-          <h3>
+          <h1>
             <strong><a href="{{ .Permalink }}">{{ .Title }}</a></strong>
-          </h3>
+          </h1>
         </div>
         <div class="blog-title">
           <h4>
-            {{ .Date.Day }} {{ index $data.months (printf "%d" .Date.Month) }} {{ .Date.Year }}
+            {{ i18n "prefix-subtitle" }} {{ .Date.Day }} {{ index $data.months (printf "%d" .Date.Month) }} {{ .Date.Year }} 
+            {{ i18n "suffix-subtitle" }} 
+            {{ if gt (countwords $authorLink) 0 }}
+              <a href='{{ $authorLink }}' target="_blank">{{ $authorFullName }}</a>
+            {{ else }}
+              {{ $authorFullName }}
+            {{ end }}
+
+            <!--
             &nbsp;&nbsp;
             {{ range .Params.tags }}
             <span class="label label-success">{{ . }}</span>
             {{ end }}
+            -->
           </h4>
         </div>
         <div class="panel panel-default">
@@ -26,8 +42,8 @@
               {{ .Content }}
               <hr>
               <div class="related-posts">
-                <h5>Related Posts</h5>
-                {{ range first 3 ( where ( where .Site.Pages.ByDate.Reverse ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
+                <h5>{{ i18n "related-posts" }}</h5>
+                {{ range first 3 ( where ( where .Site.RegularPages.ByDate.Reverse ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <h6 style="text-align: right">
@@ -52,6 +68,21 @@
           };
         </script>
         </div>
+        {{ else }}
+        <div class="blog-post">
+          <h1>
+            <strong><a href="{{ .Permalink }}">{{ .Title }}</a></strong>
+          </h1>
+        </div>
+        
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="blogpost">
+              {{ .Content }}
+            </div>
+          </div>
+        </div>
+        {{ end }}
       </div>
     </div>
     <!-- Footer -->
