[feat]: new donate link after posts

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -39,6 +39,7 @@
                         <div class="panel-body">
                             <div class="blogpost">
                                 {{ .Content }}
+                                <p class="donate-post">{{ i18n "prefix-coffee" }} <a href='{{ i18n "donation-page" | absLangURL }}'>{{ i18n "suffix-coffee" }} ☕</a></p>
                                 <hr>
                                 <div class="related-posts">
                                     <h5><b>{{ i18n "related-posts" }}</b></h5>
