--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,8 +240,8 @@ div.footer {
 }
 footer{ 
   position:absolute; 
-  bottom:0; 
-  width:100%; 
+  bottom: 0; 
+  width: 100%; 
 }
 .flag-image {
   width: 120px;
@@ -251,6 +251,13 @@ footer{
   margin: auto;
   padding-bottom: 30px;
   padding-top: 30px;
+}
+
+.donate-post {
+  padding-top: 30px;
+  color: #9b9b9b;
+  text-align: center;
+  font-size: 14px;
 }
 
 @media only screen and (max-width: 500px) {
