--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -6,8 +6,8 @@
 <link rel="manifest" href="{{ .Site.BaseURL }}img/site.webmanifest">
 
 <!-- Theme Color metadata -->
-<meta name="theme-color" content="{{ .Site.Params.theme_color }}" /> 
-<meta name="msapplication-TileColor" content="{{ .Site.Params.theme_color }}" />
+<meta name="theme-color" content="{{ .Site.Params.theme.main_color }}" /> 
+<meta name="msapplication-TileColor" content="{{ .Site.Params.theme.main_color }}" />
 
 <!-- Title metadata -->
 {{ $finalTitle := .Site.Title }}
