--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,6 +18,10 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,200bold,400old" />
         
+        {{ $style := resources.Get "sass/main.scss" | resources.ExecuteAsTemplate "style.main.scss" . | toCSS | minify | fingerprint "md5" }}
+
+        <link rel="stylesheet" href="{{ $style.Permalink }}">
+
         {{ range .Site.Params.custom_css }}
             {{ $css := resources.Get . | minify | fingerprint "md5" }}
             <link rel="stylesheet" href="{{ $css.Permalink }}">
